--- a/UDP_Test_GUI/packages.config
+++ b/UDP_Test_GUI/packages.config
@@ -23,6 +23,8 @@
   <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.9.0" targetFramework="net472" />
   <package id="OpenTelemetry.Exporter.OpenTelemetryProtocol" version="1.9.0" targetFramework="net472" />
   <package id="PacketDotNet" version="1.4.7" targetFramework="net472" />
+  <package id="Serilog" version="2.12.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Grafana.Loki" version="8.3.0" targetFramework="net472" />
   <package id="SharpPcap" version="6.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
@@ -30,6 +32,8 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.7.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
