--- a/UDP_Repeater_Service/packages.config
+++ b/UDP_Repeater_Service/packages.config
@@ -1,7 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.22.5" targetFramework="net472" />
+  <package id="Grpc" version="2.44.0" targetFramework="net472" />
+  <package id="Grpc.Core" version="2.44.0" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.44.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Diagnostics.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="OpenTelemetry" version="1.9.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api" version="1.9.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Api.ProviderBuilderExtensions" version="1.9.0" targetFramework="net472" />
+  <package id="OpenTelemetry.Exporter.OpenTelemetryProtocol" version="1.9.0" targetFramework="net472" />
   <package id="PacketDotNet" version="1.4.7" targetFramework="net472" />
   <package id="Serilog" version="4.0.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Grafana.Loki" version="8.3.0" targetFramework="net472" />
