--- a/UDP_Test_GUI/UDP_Repeater_GUI.csproj
+++ b/UDP_Test_GUI/UDP_Repeater_GUI.csproj
@@ -242,6 +242,7 @@
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\gui_form.ip_object.datasource" />
+    <None Include="Properties\DataSources\UDP_Repeater_GUI.gui_form.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
